# Event-Driven-Outreach-Automation-Platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  cities.py  dedupe_emails.py  easybroker_client.py  email_client.py  email_enricher.py  fix_easybroker_sent.py  main.py  pyproject.toml  railway.toml  requirements-scraper.txt  scraper.py  sheets_client.py  validate_emails.py  webhook_server.py
.github/workflows/: outreach.yml  outreach.yml.disabled  test.yml
src/outreach_system/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  main.py  utils.py
src/outreach_system/api/: __init__.py  webhooks.py
src/outreach_system/integrations/: __init__.py  easybroker.py  google_sheets.py  resend.py
src/outreach_system/models/: __init__.py  contact.py  webhook_event.py
src/outreach_system/services/: __init__.py  contact_sync.py  outreach.py  webhook_processor.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cli.py  test_config.py  test_easybroker.py  test_outreach_service.py  test_sync_service.py  test_webhook_processor.py
