[project]
name = "outreach-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "google-auth>=2.49.2",
    "gspread>=6.2.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "resend>=2.27.0",
    "playwright>=1.42.0",
    "pandas>=2.0.0",
]
