[project]
name = "outreach-system"
version = "0.1.0"
description = "Event-driven outreach automation platform backed by EasyBroker, Google Sheets, Resend, FastAPI, and GitHub Actions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "dnspython>=2.6.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "google-auth>=2.49.2",
    "gspread>=6.2.1",
    "pandas>=2.0.0",
    "playwright>=1.42.0",
    "pydantic-settings>=2.6.1",
    "requests>=2.32.0",
    "resend>=2.27.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outreach_system"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
